<layout xmlns:android="http://schemas.android.com/apk/res/android">
    <data>
    </data>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:gravity="center"
        style="@style/ContainerStyle">

        <TextView
            android:id="@+id/currentPlayerText"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Current Player will appear here"
            android:layout_marginBottom="16dp"
            style="@style/TitleTextStyle"/>

        <TextView
            android:id="@+id/questionText"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Question will appear here"
            android:layout_marginBottom="16dp"
            style="@style/SubtitleTextStyle"/>

        <LinearLayout
            android:id="@+id/buttonsLayout"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal">


            <Button
                android:id="@+id/truthButton"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/truth"
                style="@style/ButtonStyle"/>

            <Button
                android:id="@+id/dareButton"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/dare"
                android:layout_marginStart="8dp"
                style="@style/ButtonStyle"/>
        </LinearLayout>

        <Button
            android:id="@+id/startTimerButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/start_timer"
            android:layout_marginTop="16dp"
            android:visibility="gone"
            style="@style/ButtonStyle"/>
        <Button
            android:id="@+id/stopTimerButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/stop_timer"
            android:layout_marginTop="16dp"
            android:visibility="gone"
            style="@style/ButtonStyle"/>
        <Button
            android:id="@+id/drinkButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/drink_shot"
            android:layout_marginTop="16dp"
            style="@style/ButtonStyle"/>

        <Button
            android:id="@+id/finishButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/finish"
            android:layout_marginTop="16dp"
            android:visibility="gone"
            style="@style/ButtonStyle"/>
    </LinearLayout>
</layout>
