<layout xmlns:android="http://schemas.android.com/apk/res/android">
    <data>
    </data>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        style="@style/ContainerStyle">

        <EditText
            android:id="@+id/playerNameInput"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/add_player_hint"
            style="@style/BodyTextStyle"/>

        <Button
            android:id="@+id/addPlayerButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:text="@string/add_player"
            style="@style/ButtonStyle"/>

        <ListView
            android:id="@+id/playersListView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"/>

        <Button
            android:id="@+id/startGameButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:text="@string/start_game"
            style="@style/ButtonStyle"/>
    </LinearLayout>
</layout>
